[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/RussoOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Fonts/AGENCYB.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/DynaPuff-VariableFont_wdth,wght(1)(1).ttf" type="DynamicFontData" id=4]
[ext_resource path="res://MultiPlayer/lobby/ServerList.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.564706, 0.203922, 0.203922, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0627451, 0.541176, 0.933333, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.901961, 0.0745098, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="ServerList" type="Node2D"]
script = ExtResource( 5 )

[node name="Mods" type="Label" parent="."]
margin_left = 8.0
margin_top = 40.0
margin_right = 231.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
text = "OYUN TÜRLERI: "

[node name="Mod1" type="CheckBox" parent="."]
margin_left = 320.0
margin_top = 48.0
margin_right = 462.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
pressed = true
text = "BAYRAK SAVAŞI"
align = 1
icon_align = 1

[node name="Mod2" type="CheckBox" parent="."]
margin_left = 688.0
margin_top = 48.0
margin_right = 876.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
pressed = true
text = "ÖLÜM MAÇI"
align = 1
icon_align = 1

[node name="FlagSv" type="Node2D" parent="."]

[node name="Sv1JoinButton" type="TouchScreenButton" parent="FlagSv"]
position = Vector2( 576, 128 )
normal = ExtResource( 2 )

[node name="Sv2JoinButton" type="TouchScreenButton" parent="FlagSv"]
position = Vector2( 576, 262 )
normal = ExtResource( 2 )

[node name="Sv1" type="Sprite" parent="FlagSv"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 256, 168 )
scale = Vector2( 8.08594, 0.828125 )
texture = ExtResource( 2 )

[node name="Sv2" type="Sprite" parent="FlagSv"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 260, 300 )
scale = Vector2( 8.08594, 0.828125 )
texture = ExtResource( 2 )

[node name="Sv1Label" type="Label" parent="FlagSv"]
margin_left = 224.0
margin_top = 160.0
margin_right = 264.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 1 )
text = "0/30"

[node name="Sv2Label" type="Label" parent="FlagSv"]
margin_left = 228.0
margin_top = 287.0
margin_right = 268.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 1 )
text = "0/30"

[node name="DeathSv" type="Node2D" parent="."]

[node name="Sv3" type="Sprite" parent="DeathSv"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 256, 416 )
scale = Vector2( 8.08594, 0.828125 )
texture = ExtResource( 2 )

[node name="Sv4" type="Sprite" parent="DeathSv"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 256, 528 )
scale = Vector2( 8.08594, 0.828125 )
texture = ExtResource( 2 )

[node name="Sv3Label" type="Label" parent="DeathSv"]
margin_left = 224.0
margin_top = 407.0
margin_right = 268.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 1 )
text = "0/30"

[node name="Sv4Label" type="Label" parent="DeathSv"]
margin_left = 224.0
margin_top = 519.0
margin_right = 264.0
margin_bottom = 539.0
custom_fonts/font = SubResource( 1 )
text = "0/30"

[node name="Sv3JoinButton" type="TouchScreenButton" parent="DeathSv"]
position = Vector2( 576, 390 )
normal = ExtResource( 2 )

[node name="Sv4JoinButton" type="TouchScreenButton" parent="DeathSv"]
position = Vector2( 579, 496 )
normal = ExtResource( 2 )

[connection signal="pressed" from="Mod1" to="." method="_on_Mod1_pressed"]
[connection signal="pressed" from="Mod2" to="." method="_on_Mod2_pressed"]
[connection signal="pressed" from="FlagSv/Sv1JoinButton" to="." method="_on_Sv1JoinButton_pressed"]
